[package]
name = "collections_bench"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"

[dependencies]
# near-sdk = "4.0.0-pre.3"
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "daniyar/efficient-lookup-set", features = ["unstable"] }
#near-sdk = { path = "../../near/near-sdk-rs/near-sdk", features = ["unstable"] }
arbitrary = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# This commit may be broken in the future if squashed
workspaces = { git = "https://github.com/near/workspaces-rs", branch = "feat/call-builder" }
#workspaces = { path = "../../near/workspaces-rs/workspaces" }
rand_xorshift = "0.3"
rand = "0.8.3"
tokio = { version = "1.14.0", features = ["full"] }
